	  flow warnings? (2014-1-6).
	* arch/arm/src/a1x/a1x_serial.c: Handle BUSY interrupt (2014-1-6).
	* arch/arm/src/armv7-a/arm_head.S and arm_pghead.S:  Add more nop's
	  after enabling the MMU.  The cortex-a8 seems to need these
	  (2014-1-7).
	* arch/arm/src/a1x/a1x_serial.c: Correct handling of the BUSY
	  interrupt (2014-1-7).
	* include/sys/types.h:  Add a bogus rsize_t type (2014-1-7).
	* libc/stdio/lib_gets_s.c:  Add a quick'n'dirty implementation of
	  gets_s() which replaces gets() in C11 (2014-1-7).
	* libc/stdio/lib_fopen.c:  Add support for new C11 exclusive open
	  ("x") (2014-1-7)
	* include/threads.h:  First crude cut at a C11 threads.h header
	  file (just maps to pthreads) (2014-1-7).
	* libc/stdio/lib_libfgets.c:  Common implementation supports all
	  of the slightly different requirements of gets(), gets_s(), and
	  fgets() (2014-1-7).
	* arch/arm/include/stm32/chip.h and chip/stm32f103ze_pinmap.h:
	  various fixes for STM32F103ZE SPI3.  From Steve Redler IV
	  (2014-1-7).
	* graphics/nxsu/Make.defs:  Typo that crept into build in recent
	  NX reorganization.  Found by Steve Redler IV (2014-1-7).
	* graphics/nxsu/:  Another typo from the
	  recent NX reorganization from Steve Redler IV (2014-1-7).
	* graphics/nxbe/nxbe_closewindow.c, nx_close.c, nx_constructwindow.c,
	  nx_open.c, and nx_openwindow.c:  Needs to use kuzalloc and kufree,
	  not umm_zalloc and umm_free.  Additional typo in nx_constructwindow.c
	  (wnd should be hwnd). Also noted by Steve Redler IV (2014-1-7).
	* configs/viewtool-stm32f107/src/stm32_touchscreen.c (and other
	  files):  Add support for the XPT2046 touchscreen controller on
	  the Viewtool LCD module connected to the Viewtool STM32F103
	  board (2014-1-9).
	* libc/strings/lib_stpcpy.c:  Add stpcpy() (2014-1-9).
	* arch/arm/src/a1x/a1x_lowputc.c and a1x_serial.c:  Mystery
	  finally solved:  The A10 serial clock is the OSC24M clock.
	  Thanks to Alan Carvalho de Assis (2014-1-10)